* Added in deep_merge methods for hash, copied over from ActiveSupport 2.1
* Improved order by auto joins to be based off of what order_by returns instead of setting it when setting order_by.
* Added priority_order_by. Useful if you want to order featured products first and then order as usual. See documentation in Searchgasm::Search::Ordering for more info.

== 1.2.0 released 2008-09-24

* Added searchgasm_params and searchgasm_url helper to use outside of the control type helpers.
* Added dup and clone methods that work properly for searchgasm objects
* Fixed bug to remove nil scope values, HABTM likes to add :limit => nil
* Removed unnecessary build_search methods for associations
* Removed support for searching with conditions only. This just made things much more complicated when you can accomplish the same thing by starting a new search and only setting conditions.
* Fixed bug when searching with *any* conditions to use left outer joins instead of inner joins.

== 1.1.3 released 2008-09-23

* Setting a condition to nil removes it if the condition is set to ignore blanks
* Setting search.conditions = "some sql" will reset ALL conditions. Alternatively search.conditions => {:first_name_contains => "Ben"} will overwrite "some sql". The same goes with search.conditions.first_name_contains = "Ben".
* Fixed bug with inspect
* Other small performance enhancements with memoized attributes

== 1.1.2 released 2008-09-22

* Fixed bug with select control types not using :search_obj to determine its select values.
* Added is_nil and is_blank condition types.
* "memoized" various attributes for performance enhancements
* Removed the :order option from calculation options when :order is useless and just slows down query.
* Switched from using :include to :joins, big performance increase

== 1.1.1 released 2008-09-19

* Fixed typo in "next page" button.